# mkdocs-zip-folders

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  myCode.zip.hash  setup.cfg  sitemap.xml  toShare.zip.hash
docs/: CNAME  README.md
inFolder/: zipInFolder.zip.hash
myCode/: main.c
search/: search_index.json
toShare/: index.html
zip_folders/: plugin.py
