[metadata]
name = mkdocs-zip-folders
version = 1.0.2
description = MkDocs plugin to zip configured folders and add them to the site.
keywords = mkdocs plugin zip folders download zip-folders
url = https://github.com/JakubAndrysek/mkdocs-zip-folders
author = Jakub Andrýsek
author_email = email@kubaandrysek.cz
project_urls =
    Source = https://github.com/JakubAndrysek/mkdocs-zip-folders
    Documentation = https://zip-folders.kubaandrysek.cz/
    Tracker = https://github.com/JakubAndrysek/mkdocs-zip-folders/issues
    Funding = https://github.com/sponsors/jakubandrysek

license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    mkdocs
packages = find:
include_package_data = True

[options.entry_points]
mkdocs.plugins =
    zip_folders = zip_folders.plugin:ZipFoldersPlugin

[options.extras_require]
dev =
    mkdocs-material
    mkdocs-open-in-new-tab
    mkdocs-glightbox
    mkdocs-git-revision-date-localized-plugin
